# napari-geoscience-viewer

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
napari_hdf5_netcdf_viewer/: __init__.py  napari.yaml
napari_hdf5_netcdf_viewer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/napari_geoscience_viewer/: napari.yaml
src/napari_geoscience_viewer/_tests/: test_quick_hdf5_netcdf_viewer.py
src/napari_hdf5_netcdf_viewer/: _reader.py  _widget.py  napari.yaml  quick_hdf5_netcdf_viewer.py
src/napari_hdf5_netcdf_viewer/_tests/: test_quick_hdf5_netcdf_viewer.py  test_widget.py
