[metadata]
name = napari-hdf5-netcdf-viewer
version = 0.0.1
description = A napari plugin for quick-viewing HDF5 and NetCDF files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yunhal/
author = Yunha Lee
author_email = yunha.lee.00@gmail.com
classifiers =
    Framework :: napari

[options]
packages = find:
install_requires =
    numpy
    h5py
    netCDF4
    pathlib
    magicgui
    
