[metadata]
name = napari-hdf5-netcdf-viewer
version = 0.0.1
description = A napari plugin for quick-viewing HDF5 and NetCDF files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yunhal/napari-hdf5-netcdf-viewer
author = Yunha Lee
author_email = yunha.lee.00@gmail.com
classifiers =
    Framework :: napari
project_urls =
    Bug Tracker = https://github.com/yunhal/napari-hdf5-netcdf-viewer/issues
    Documentation = https://github.com/yunhal/napari-hdf5-netcdf-viewer#README.md
    Source Code = https://github.com/yunhal/napari-hdf5-netcdf-viewer
    User Support = https://github.com/yunhal/napari-hdf5-netcdf-viewer/issues
    
[options]
packages = find:
install_requires =
    numpy
    h5py
    netCDF4
    pathlib
    magicgui

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-hdf5-netcdf-viewer = napari_hdf5_netcdf_viewer:napari.yaml


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml

